# PwnHunter

./: .gitignore  README.md  pyproject.toml  requirements.txt
pwnhunter/: __init__.py  binary_loader.py  cli.py  constants.py  disassembler.py  elf_parser.py  models.py  report.py  scan_context.py  scanner.py  strings_utils.py
pwnhunter/detectors/: __init__.py  dangerous_functions.py  format_string.py  heap.py  info_leak.py  integer_overflow.py  rop_gadgets.py  security_bypass.py  shellcode.py
tests/: test_detectors.py  test_elf_parser.py  test_integration.py  test_models.py
tests/fixtures/: README.md  vuln.c
